--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,30 @@
 <resources>
-    <string name="app_name">Submission Android Intermediate</string>
+    <string name="app_name">Story App</string>
     <string name="login_description">Halo, selamat datang di Story App</string>
-    <string name="login">Login</string>
+    <string name="iconLogin">Hanya icon hiasan untuk login</string>
+    <string name="iconRegister">Hanya icon hiasan untuk register</string>
+    <string name="registerDescription">Silahkan masukkan data akun kamu</string>
+    <string name="storySplash">Ga punya temen cerita? ceritain di sini aja!</string>
+    <string name="bottomSplash">Created by Bangkit Cohort</string>
+
     <string name="email">Masukan email kamu</string>
+    <string name="emailFormatWrong">Format email salah</string>
+
     <string name="password">Masukan password kamu</string>
-    <string name="login_button">Login</string>
-    <string name="register">Belum punya akun?</string>
-    <string name="register_button">Daftar</string>
+    <string name="passwordConfirm">Konfirmasi password kamu</string>
     <string name="passwordVisible">Lihat Password</string>
     <string name="passwordLess">Password harus lebih dari 6 karakter</string>
-    <string name="emailFormatWrong">Format email salah</string>
-    <string name="iconLogin">Hanya icon hiasan untuk login</string>
+    <string name="passwordNotMatch">Password tidak sama</string>
+
+    <string name="login">Login</string>
+    <string name="login_button">Login</string>
+    <string name="registerHeader">Daftar Akun</string>
+    <string name="register">Belum punya akun?</string>
+    <string name="register_button">Daftar</string>
+    <string name="registerCreate">Buat Akun</string>
+
+
+    <string name="nameNone">Nama tidak boleh kosong</string>
+    <string name="name">Masukan nama kamu</string>
+
 </resources>
